--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@react-three/drei": "^8.19.5",
+    "@react-three/fiber": "^7.0.26",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-three-fiber": "^6.0.13",
     "three": "^0.139.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.43",
+    "@types/three": "^0.139.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "typescript": "^4.6.3",
