orhit and optimisations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,14 +19,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-
     "paths": {
-      "style/*": [ "./style/*" ],
+      "style/*": [
+        "./style/*"
+      ]
     }
-
-
   },
   "exclude": [
     "node_modules"
+  ],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
   ]
 }
