--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^8.19.5",
     "@react-three/fiber": "^7.0.26",
-    "next": "12.1.1",
+    "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "three": "^0.139.0"
