--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/three": "^9.4.4",
     "@react-three/drei": "^9.4.2",
     "@react-three/fiber": "^8.0.11",
+    "@use-gesture/react": "^10.2.11",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
