--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next_site",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,18 +13,19 @@
     "@react-three/drei": "^9.4.2",
     "@react-three/fiber": "^8.0.11",
     "@use-gesture/react": "^10.2.11",
-    "next": "^12.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "next": "^14.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-gistlab": "^1.0.8",
-    "three": "^0.139.0"
+    "three": "^0.161.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.43",
-    "@types/three": "^0.139.0",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1",
-    "typescript": "^4.6.3",
+    "@types/react": "^18.2.55",
+    "@types/three": "^0.161.2",
+    "@types/next": "^9.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.1.0",
+    "typescript": "^5.3.3",
     "url-loader": "^4.1.1"
   }
 }
