--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "next_site",
-  "version": "0.1.1",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@react-spring/three": "^9.4.4",
-    "@react-three/drei": "^9.4.2",
-    "@react-three/fiber": "^8.0.11",
-    "@use-gesture/react": "^10.2.11",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-gistlab": "^1.0.8",
-    "three": "^0.161.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/three": "^0.161.2",
-    "@types/next": "^9.0.0",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
-    "typescript": "^5.3.3",
-    "url-loader": "^4.1.1"
-  }
+    "name": "next_site",
+    "version": "0.1.1",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@react-spring/three": "^9.7.3",
+        "@react-three/drei": "^9.97.3",
+        "@react-three/fiber": "^8.15.16",
+        "@use-gesture/react": "^10.2.11",
+        "next": "^14.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-gistlab": "^1.0.8",
+        "three": "^0.161.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.2.55",
+        "@types/three": "^0.161.2",
+        "eslint": "^8.56.0",
+        "eslint-config-next": "14.1.0",
+        "eslint-config-prettier": "^9.1.0",
+        "prettier": "3.2.5",
+        "typescript": "^5.3.3",
+        "url-loader": "^4.1.1"
+    }
 }
