--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@react-spring/three": "^9.7.3",
         "@react-three/drei": "^9.97.3",
         "@react-three/fiber": "^8.15.16",
+        "@react-three/postprocessing": "^2.15.13",
         "@use-gesture/react": "^10.2.11",
         "next": "^14.1.0",
         "react": "^18.2.0",
@@ -20,12 +21,13 @@
         "three": "^0.161.0"
     },
     "devDependencies": {
+        "@next/eslint-plugin-next": "^14.1.0",
         "@types/react": "^18.2.55",
         "@types/three": "^0.161.2",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
         "eslint": "^8.56.0",
         "eslint-config-next": "14.1.0",
-        "eslint-config-prettier": "^9.1.0",
-        "prettier": "3.2.5",
         "typescript": "^5.3.3",
         "url-loader": "^4.1.1"
     }
