--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@react-three/fiber": "^8.15.16",
         "@react-three/postprocessing": "^2.15.13",
         "@use-gesture/react": "^10.2.11",
+        "@vercel/speed-insights": "^1.0.9",
         "next": "^14.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
