Fixed scrollTo on ios

--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-gistlab": "^1.0.8",
+        "smoothscroll-polyfill": "^0.4.4",
         "three": "^0.161.0"
     },
     "devDependencies": {
         "@next/eslint-plugin-next": "^14.1.0",
         "@types/react": "^18.2.55",
+        "@types/smoothscroll-polyfill": "^0.3.4",
         "@types/three": "^0.161.2",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
