--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "outDir": "./built",
         "allowJs": true,
         "strict": true,
-        "target": "es5",
+        "target": "ESNext",
         "lib": ["dom", "dom.iterable", "esnext"],
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
@@ -15,10 +15,20 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
+        "allowImportingTsExtensions": true,
         "paths": {
             "style/*": ["./style/*"]
-        }
+        },
+        "plugins": [
+            {
+              "name": "next"
+            }
+          ]
     },
     "exclude": ["node_modules"],
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+    "include": [    
+    "next-env.d.ts",
+    ".next/types/**/*.ts",
+    "**/*.ts",
+    "**/*.tsx"]
 }
