--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
-    "name": "next_site",
-    "version": "0.1.1",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "@react-three/drei": "^9.97.3",
-        "@react-three/fiber": "^8.15.19",
-        "@react-three/postprocessing": "^2.15.13",
-        "@studio-freight/lenis": "^1.0.39",
-        "@use-gesture/react": "^10.2.11",
-        "@vercel/speed-insights": "^1.0.9",
-        "next": "^14.1.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-embed-gist": "^1.0.20",
-        "three": "^0.161.0",
-        "three-stdlib": "^2.29.5",
-        "tunnel-rat": "^0.1.2"
-    },
-    "devDependencies": {
-        "@next/bundle-analyzer": "^14.1.1",
-        "@next/eslint-plugin-next": "^14.1.0",
-        "@types/node": "20.11.25",
-        "@types/react": "^18.2.55",
-        "@types/react-embed-gist": "^1.0.4",
-        "@types/three": "^0.161.2",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
-        "eslint": "^8.56.0",
-        "eslint-config-next": "14.1.0",
-        "typescript": "^5.3.3",
-        "url-loader": "^4.1.1"
-    }
+  "name": "next_site",
+  "version": "0.1.1",
+  "private": true,
+  "dependencies": {
+    "@react-three/drei": "^9.99.7",
+    "@react-three/fiber": "^8.15.19",
+    "@react-three/postprocessing": "^2.16.2",
+    "@studio-freight/react-lenis": "^0.0.45",
+    "glsl-random": "^0.0.5",
+    "lenis": "^0.0.2",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-embed-gist": "^1.0.20",
+    "three": "^0.162.0",
+    "three-stdlib": "^2.28.9",
+    "tunnel-rat": "^0.1.2",
+    "webpack": "^5.90.3"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.4",
+    "@stylistic/eslint-plugin-js": "^1.6.3",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.63",
+    "@types/react-embed-gist": "^1.0.4",
+    "@types/three": "^0.161.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "typescript": "^5.3.3",
+    "url-loader": "^4.1.1"
+  },
+  "scripts": {
+    "lint": "next lint --fix --dir app",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  }
 }
